# ccw-agentic-system-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agent/: __init__.py  __main__.py  config.py  loop.py  telemetry.py
agent/modes/: __init__.py  adversarial.py  review.py  triage.py
agent/tools/: __init__.py  _shell.py  git.py  github.py  repo.py  tests.py
docs/: design.md  reference-design.md
fixtures/issues/: 01-stock-calc-off-by-one.md  02-i18n-key-leak.md  03-broken-filter.md
fixtures/prs/01-supplier-feature/: README.md  patch.diff
prompts/: coordinator.md  critic.md  patcher.md  planner.md  reviewer.md  router.md  synthesizer.md
scripts/: setup-lab.sh  teardown.sh  verify-env.sh
tests/: smoke.py
